# omnibar

./: Cargo.toml  README.md  build.rs
src/: bar.rs  bindings.rs  client.rs  config.rs  gdk.rs  macros.rs  main.rs  module.rs  wayland.rs
src/bindings/: gdk_wayland.rs  gtk.rs  wayland.rs  wlr.rs  xdg.rs
src/modules/: battery.rs  clock.rs  cpu.rs  custom.rs  disk.rs  memory.rs  mod.rs  pulseaudio.rs  sway.rs
