[package]
name = "omnibar"
version = "0.1.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
edition = "2018"

[dependencies]
gtk-layer-shell-rs = { git = "https://github.com/subgraph/gtk-layer-shell-rs" }
gtk = { git = "https://github.com/gtk-rs/gtk" }
gio = { git = "https://github.com/gtk-rs/gio" }
